syntax = "proto3";

option csharp_namespace = "WorkerAgent";

package greet;

service WorkerRegistration{
	rpc RegisterWorker (WorkerMessage) returns (ConfirmationResponse);
}


message WorkerMessage{
	string worker_id =1;
	string worker_adress=2;
}

message ConfirmationResponse{
	string message=1;
	bool status = 2;
}